--- a/www/index.html
+++ b/www/index.html
@@ -1,43 +1,67 @@
 <!DOCTYPE html>
-<!--
-    Licensed to the Apache Software Foundation (ASF) under one
-    or more contributor license agreements.  See the NOTICE file
-    distributed with this work for additional information
-    regarding copyright ownership.  The ASF licenses this file
-    to you under the Apache License, Version 2.0 (the
-    "License"); you may not use this file except in compliance
-    with the License.  You may obtain a copy of the License at
-
-    http://www.apache.org/licenses/LICENSE-2.0
-
-    Unless required by applicable law or agreed to in writing,
-    software distributed under the License is distributed on an
-    "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
-     KIND, either express or implied.  See the License for the
-    specific language governing permissions and limitations
-    under the License.
--->
 <html>
     <head>
+        <!-- Start of Meta -->
+        <title>Moment</title>
         <meta charset="utf-8" />
         <meta name="format-detection" content="telephone=no" />
         <!-- WARNING: for iOS 7, remove the width=device-width and height=device-height attributes. See https://issues.apache.org/jira/browse/CB-4323 -->
         <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
+
+        <!-- Start of CSS -->
         <link rel="stylesheet" type="text/css" href="css/index.css" />
-        <title>Hello World</title>
-    </head>
-    <body>
-        <div class="app">
-            <h1>PhoneGap</h1>
-            <div id="deviceready" class="blink">
-                <p class="event listening">Connecting to Device</p>
-                <p class="event received">Device is Ready</p>
-            </div>
-        </div>
+        <link rel="stylesheet" type="text/css" href="css/icons.css" />
+
+        <!-- Start of Javascript -->
         <script type="text/javascript" src="phonegap.js"></script>
+        <script type="text/javascript" src="js/zepto.js"></script>
+        <script type="text/javascript" src="js/center.js"></script>
         <script type="text/javascript" src="js/index.js"></script>
         <script type="text/javascript">
             app.initialize();
         </script>
+    </head>
+    <body>
+        <!-- Start of Body -->
+        <div id="header">
+            <div class="container">
+                <div class="menu fa fa-bars"></div>
+                <div class="logo">moment</div>
+                <div class="post fa fa-pencil-square-o"></div>
+            </div>
+        </div>
+        <div id="events">
+            <div class="event" style="background-image: url('https://scontent-b-sjc.xx.fbcdn.net/hphotos-ash3/t1.0-9/10169329_10203913109215922_414375286691091430_n.jpg');">
+                <div class="darkener"></div>
+                <div class="hero">Beach day!!!</div>
+                <div class="footer">
+                    <div class="location">Santa Cruz</div>
+                    <div class="attendees">
+                        <div class="attendee" style="background-image: url('https://fbcdn-sphotos-b-a.akamaihd.net/hphotos-ak-frc3/t1.0-9/1240604_359327467532968_196202760_n.jpg')"></div>
+                        <div class="attendee" style="background-image: url('https://scontent-b-sjc.xx.fbcdn.net/hphotos-prn2/t1.0-9/1625724_10203348015047119_469588628_n.jpg')"></div>
+                        <div class="attendee next">···</div>
+                    </div>
+                    <div class="chatter">
+                        12 <span class="fa fa-comment"></span>
+                    </div>
+                </div>
+            </div>
+            <div class="event" style="background-image: url('https://fbcdn-sphotos-g-a.akamaihd.net/hphotos-ak-ash3/t1.0-9/10325369_10152009984131436_3550462462739132196_n.jpg');">
+                <div class="darkener"></div>
+                <div class="hero">Now everyone take out your dumb gopros</div>
+                <div class="footer">
+                    <div class="location">San Jose</div>
+                    <div class="attendees">
+                        <div class="attendee" style="background-image: url('https://fbcdn-sphotos-b-a.akamaihd.net/hphotos-ak-frc3/t1.0-9/1240604_359327467532968_196202760_n.jpg')"></div>
+                        <div class="attendee" style="background-image: url('https://scontent-b-sjc.xx.fbcdn.net/hphotos-prn2/t1.0-9/1625724_10203348015047119_469588628_n.jpg')"></div>
+                        <div class="attendee next">···</div>
+                    </div>
+                    <div class="chatter">
+                        19 <span class="fa fa-comment"></span>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- End of Body -->
     </body>
 </html>
