--- a/phonegap/www/index.html
+++ b/phonegap/www/index.html
@@ -9,17 +9,20 @@
         <meta name="viewport" content="user-scalable=no, initial-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
 
         <!-- Start of CSS -->
-        <link rel="stylesheet" type="text/css" href="/css/core.css" />
-        <link rel="stylesheet" type="text/css" href="/css/index.css" />
-        <link rel="stylesheet" type="text/css" href="/css/icons.css" />
+        <link rel="stylesheet" type="text/css" href="css/core.css" />
+        <link rel="stylesheet" type="text/css" href="css/index.css" />
+        <link rel="stylesheet" type="text/css" href="css/icons.css" />
 
         <!-- Start of Javascript -->
-        <script type="text/javascript" src="/phonegap.js"></script>
-        <script type="text/javascript" src="/js/jquery.js"></script>
-        <script type="text/javascript" src="/js/center.js"></script>
-        <script type="text/javascript" src="/js/index.js"></script>
+        <script type="text/javascript" src="phonegap.js"></script>
+        <script type="text/javascript" src="js/jquery.js"></script>
+        <script type="text/javascript" src="js/fastclick.js"></script>
+        <script type="text/javascript" src="js/center.js"></script>
+        <script type="text/javascript" src="js/index.js"></script>
         <script type="text/javascript">
-            app.initialize();
+            $(function() {
+                app.initialize();
+            });
         </script>
     </head>
     <body>
@@ -30,7 +33,7 @@
             <div class="subheader">
                 See your friends events through <br> all your social networks!
             </div>
-            <a href="views/events.html" class="button">Sign into Your Networks</a>
+            <a href="views/events.html" class="button">Sign Into Your Networks</a>
         </div>
         <!-- End of Body -->
     </body>
