app structure improvments

--- a/phonegap/www/index.html
+++ b/phonegap/www/index.html
@@ -13,11 +13,14 @@
         <link rel="stylesheet" type="text/css" href="css/index.css" />
         <link rel="stylesheet" type="text/css" href="css/icons.css" />
 
-        <!-- Start of Javascript -->
+        <!-- Start of Javascript: General -->
         <script type="text/javascript" src="phonegap.js"></script>
         <script type="text/javascript" src="js/jquery.js"></script>
         <script type="text/javascript" src="js/fastclick.js"></script>
         <script type="text/javascript" src="js/center.js"></script>
+        <script type="text/javascript" src="js/core.js"></script>
+
+        <!-- Start of Javascript: Page Specific -->
         <script type="text/javascript" src="js/index.js"></script>
         <script type="text/javascript">
             $(function() {
