adding a little animation

--- a/phonegap/www/index.html
+++ b/phonegap/www/index.html
@@ -39,13 +39,19 @@
             <div class="subheader">
                 See your friends events through <br> all your social networks!
             </div>
-            <div class="login button" data-key="facebook">
-                <div class="icon fa fa-facebook"></div>
+            <div class="button" data-key="facebook">
+                <div class="icon">
+                    <div class="logo fa fa-facebook"></div>
+                    <div class="spinner fa fa-refresh fa-spin"></div>
+                </div>
                 <div class="text">Login with Facebook</div>
             </div>
             <div class="breaker"><span>or</span></div>
-            <div class="login button" data-key="twitter">
-                <div class="icon fa fa-twitter"></div>
+            <div class="button" data-key="twitter">
+                <div class="icon">
+                    <div class="logo fa fa-twitter"></div>
+                    <div class="spinner fa fa-refresh fa-spin"></div>
+                </div>
                 <div class="text">Login with Twitter</div>
             </div>
         </div>
