--- a/phonegap/www/index.html
+++ b/phonegap/www/index.html
@@ -27,9 +27,9 @@
         <!-- Start of Javascript: Page Specific -->
         <script type="text/javascript" src="js/index.js"></script>
         <script type="text/javascript">
-            $(function() {
+            setTimeout(function() {
                 app.initialize();
-            });
+            }, 100);
         </script>
 
         <!-- Start of Javascript: Debugging -->
