--- a/phonegap/www/events.html
+++ b/phonegap/www/events.html
@@ -9,33 +9,37 @@
         <meta name="viewport" content="user-scalable=no, initial-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
 
         <!-- Start of CSS -->
-        <link rel="stylesheet" type="text/css" href="../css/core.css" />
-        <link rel="stylesheet" type="text/css" href="../css/events.css" />
-        <link rel="stylesheet" type="text/css" href="../css/icons.css" />
-
-        <!-- Start of Javascript: Debugging -->
-        <script src="http://169.233.238.208:8080/target/target-script-min.js#anonymous"></script>
+        <link rel="stylesheet" type="text/css" href="css/core.css" />
+        <link rel="stylesheet" type="text/css" href="css/events.css" />
+        <link rel="stylesheet" type="text/css" href="css/icons.css" />
 
         <!-- Start of Javascript: General -->
         <script type="text/javascript" src="phonegap.js"></script>
-        <script type="text/javascript" src="../js/jquery.js"></script>
-        <script type="text/javascript" src="../js/fastclick.js"></script>
-        <script type="text/javascript" src="../js/center.js"></script>
-        <script type="text/javascript" src="../js/core.js"></script>
+        <script type="text/javascript" src="js/jquery.js"></script>
+        <script type="text/javascript" src="js/fastclick.js"></script>
+        <script type="text/javascript" src="js/center.js"></script>
+        <script type="text/javascript" src="js/core.js"></script>
+
+        <!-- Start of Javascript: Facebook -->
+		<script src="cdv-plugin-fb-connect.js"></script>
+		<script src="facebook-js-sdk.js"></script>
 
         <!-- Start of Javascript: Page Specific -->
-        <script type="text/javascript" src="../js/events.js"></script>
+        <script type="text/javascript" src="js/events.js"></script>
         <script type="text/javascript">
-            $(function() {
+            setTimeout(function() {
                 app.initialize();
-            });
+            }, 100);
         </script>
+
+        <!-- Start of Javascript: Debugging -->
+        <script src="http://localhost:8080/target/target-script-min.js#anonymous"></script>
     </head>
     <body>
         <!-- Start of Body -->
         <div id="header">
             <div class="container">
-                <a href="../index.html" class="icon left menu fa fa-bars"></a>
+                <div class="icon left menu fa fa-bars"></div>
                 <div class="logo">moment</div>
                 <div class="icon right post fa fa-pencil-square-o"></div>
             </div>
